--- a/styles.css
+++ b/styles.css
@@ -26,3 +26,23 @@ body {
   color: #0a0a23;
   padding: 5px;
 }
+
+#monsterStats {
+  display: none;
+  padding: 5px;
+  border: 1px solid #0a0a23;
+  color: #ffffff;
+  background-color: #c70d0d;
+}
+
+.stat {
+  padding-right: 10px;
+}
+
+button {
+  cursor: pointer;
+  color: #0a0a23;
+  background-color: #feac32;
+  background-image: linear-gradient(#fecc4c, #ffac33);
+  border: 3px solid #feac32;
+}
